# imswitch-arkitekt-next

./: README.md  setup.cfg
src/imswitch_arkitekt_next/: __init__.py  imswitch.yaml  imswitch_arkitekt_next_controller.py  imswitch_arkitekt_next_info.py  imswitch_arkitekt_next_manager.py  imswitch_arkitekt_next_widget.py
src/imswitch_arkitekt_next/_tests/: test_reader.py  test_widget.py
